<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Welcome"
    android:background="@drawable/welcome_bg"
    >
    <TextView
        android:layout_marginTop="60dp"
        android:id="@+id/WelcomeAgain"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/WelcomeAgain"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView

        android:id="@+id/username_welcome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/WelcomeAgain"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/advice"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn3"
        android:text="@string/advice"
        android:textColor="@color/white"
        android:textSize="25sp" />
    <Button
        android:id="@+id/chat"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn3"
        android:text="@string/chat"
        android:textColor="@color/white"
        android:textSize="25sp" />
</LinearLayout>